--- a/pathfinding-visualizer/package.json
+++ b/pathfinding-visualizer/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@indutny/maze": "^1.0.0",
+    "@reach/dialog": "^0.13.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
